<resources>
    <string name="app_name">RoomDatabase</string>
    <string name="name_hint">Enter name</string>
    <string name="occupation_hint">Occupation</string>
    <string name="save_text">Save</string>
    <string name="empty">Fill the empty spaces</string>
    <string name="description_text">Plus button icon</string>
    <string name="update_button_text">Update</string>
    <string name="delete_button_text">Delete</string>
    <string name="ignore">d</string>
    <string name="delete_all">Delete all contacts</string>
</resources>